[package]
name = "kvs"
version = "0.1.0"
authors = ["Weihua Liu <auhiewuil@gmail.com>"]
description = "A Key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
clap = "2.33.3"